# GL_UGE_Project

./: 8bit_NormalMap_pipeline.py  CMakeLists.txt  LICENSE  README.md  credit.md  file_collector.py  note.md  notes.md  output.json  texture_converter_8PNG.py
APP1/: CMakeLists.txt  main.cpp  proto_point_light.cpp
APP1/shaders/: deferred_gbuffer.fs.glsl  deferred_gbuffer.vs.glsl  deferred_lighting.fs.glsl  deferred_lighting.vs.glsl  directionallight.fs.glsl  point_shadow_depth.fs.glsl  point_shadow_depth.gs.glsl  point_shadow_depth.vs.glsl  shadow_mapping_depth.fs.glsl  shadow_mapping_depth.vs.glsl  sphere.vs.glsl
APP1/utils/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  GBuffer.cpp  GBuffer.hpp  Init.cpp  Init.hpp  Initialization.cpp  Initialization.hpp  Lighting.hpp  Objects.cpp  Objects.hpp  Render.cpp.txt  Render.hpp.txt  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp
APP2/: CMakeLists.txt  collision.hpp  cube.cpp  cube.hpp  global.cpp  global.hpp  main.cpp  models.cpp  models.hpp  proto_point_light.cpp.txt  resource_loader.cpp  resource_loader.hpp  scene_object.cpp  scene_object.hpp  sphere.cpp  sphere.hpp  utilities.cpp  utilities.hpp
APP2/shaders/: pointlight.fs.glsl
APP3/: CMakeLists.txt  graphics.cpp  graphics.hpp  main copy.cpp.txt  main.cpp  models.cpp  models.hpp  point_light.hpp  resource_loader.cpp  resource_loader.hpp  scene_objects.cpp  scene_objects.hpp
APP3/assets/planets/earth/: convt.py
APP3/assets/planets/saturn/: saturn_rings.mdp
APP3/assets/textures_cube_PBR/deepslate_emerald_ore/: deepslate_emerald_ore_s.mdp
APP3/shaders/: light.fs.glsl  pointlight.fs.glsl  room1.fs copy.glsl  room1.fs.glsl  room2.fs copy.glsl  room2.fs.glsl  room2.vs.glsl  skybox.fs.glsl  unified_shader.vs.glsl
APP3/shaders/depth/: depth.fs.glsl
APP3/shaders/lighting/: lighting.fs.glsl
APP3/shaders/room_2/: room_2.fs.glsl  room_2.vs.glsl
APP3/utils/: collision.cpp  collision.hpp  cube.cpp  cube.hpp  global.cpp  global.hpp  initialization.cpp  initialization.hpp  lights.cpp  lights.hpp  material.hpp  material_manager.hpp  material_setup.cpp  material_setup.hpp  models.cpp  models.hpp  object_setup.cpp  object_setup.hpp  rendering.cpp  rendering.hpp  resource_loader.cpp  resource_loader.hpp  scene_object.cpp  scene_object.hpp  shader.cpp  shader.hpp  sphere.cpp  sphere.hpp  texture.cpp  texture.hpp  utilities.cpp  utilities.hpp
TP4/: CMakeLists.txt  ex01_pointlight.cpp  ex01_sphere.cpp
TP4/shaders/: directionallight.fs.glsl  point_shadow_depth.vs.glsl  pointlight.fs.glsl  sphere.fs.glsl  texture_cube.fs.glsl  texture_cube.vs.glsl  unified_shader.fs.glsl  unified_shader.vs.glsl
assets/models/HeaterOBJ/: Heater.mtl
assets/models/Rocking_Chair/: Kid_Rocking_Chair.mb  Kid_Rocking_Chair.stl
assets/models/Torus/: Torus.mtl
deprecated_python_converters/: generate_normalMaps.py
glimac/: CMakeLists.txt
glimac/glimac/: Cone.hpp  Geometry.hpp  Image.hpp  Program.hpp  SDLWindowManager.hpp  Shader.hpp  Sphere.hpp  common.hpp
glimac/src/: Geometry.cpp  Image.cpp  SDLWindowManager.cpp
